src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser-4.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Decl:
    - Destruct:
        - A
        - B
    - Expr:
        - i
        - - Name: c
          - Name: d

