src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser-5.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Decl:
    - Direct: l
    - Expr:
        - l
        - - Numeric:
              Number: 0.1
          - Numeric:
              Number: 1
          - Name: A

