src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser-6.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Decl:
    - Destruct:
        - S
        - _
    - Expr:
        - i
        - - Name: l
          - Name: c
          - Name: A

