src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser-7.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Decl:
    - Direct: k
    - Expr:
        - l
        - - Numeric:
              Number: -0.2
          - Numeric:
              Number: 1
          - Name: B

