src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser-9.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Decor:
    - obj:
        Line2P:
          - S
          - P
      decor: ">"
      config: ~
    - obj:
        Line2P:
          - T
          - Q
      decor: ">"
      config: ~

