src/interpreter/tests/snapshots/propose__interpreter__tests__parser__parser.snap
---
source: src/interpreter/tests/parser.rs
expression: parse(string).unwrap()
---
- Config:
    dotsize:
      Number: 7
    dotstroke:
      String: red
    dotwidth:
      Number: 1
    height:
      Number: 10
    width:
      Number: 14

